# SteamNewsBot

./: .gitignore  Cargo.toml
src/: funcs.rs  main.rs  news.rs  structs.rs
src/commands/: boop.rs  mod.rs  news.rs  ping.rs
