[package]
name = "steamnewsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.24.0"
shuttle-runtime = "0.24.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "framework", "gateway", "model", "rustls_backend", "standard_framework"] }
shuttle-secrets = "0.24.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.105"
chrono = "0.4.28"
