[package]
name = "steamnewsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-poise = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-secrets = "0.25.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.105"
chrono = "0.4.28"
poise = "0.5.5"

